Fix: Gap between buttons wouldn't apply in some cases.

--- a/src/styles/timer.scss
+++ b/src/styles/timer.scss
@@ -37,7 +37,7 @@
 /* Tablet styles */
 @media screen and (min-width: 600px) {
   #buttons {
-    grid-gap: var(--marginMobile);
+    gap: var(--marginMobile);
   }
 
 }
